k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-productivity-api
  namespace: port-productivity-mlops
  labels:
    app: port-productivity-api
spec:
  selector:
    app: port-productivity-api
  ports:
    - name: http
      port: 80
      targetPort: http
